--- a/08-AdvancedStats.Rmd
+++ b/08-AdvancedStats.Rmd
@@ -15,6 +15,8 @@ source("www/Table_Design.R")
 
 # Advanced Statistical Methods
 
+*Class given by: Michael Greenacre*
+
 ```{r, warning=FALSE, comment=""}
 library(lavaan)
 library(formattable)
