--- a/06-Python.Rmd
+++ b/06-Python.Rmd
@@ -704,8 +704,128 @@ def get_mse(model):
 ### SVC
 
 ```{python}
-
+import 
 ```
 
+Make list to create the model
+
+```{python}
+svc = make_pipeline(
+  transformer,
+  GridSearchCV(
+    estimator=SVC(kernel="linear"),
+    param_grid={
+      "C": np.logspace(-3, 3, 50)
+    },
+    cv=kfold,
+    n_jobs=4
+  )
+)
+```
+
+The default of scoring = the estimator's score method, the accuracy
 
 
+Fit model
+
+```{python}
+svc.fit(X_tv, y_tv)
+```
+
+Gives us the best estimator:
+
+```{python}
+svc[1].best_estimator_
+```
+
+If it is at the edge of the grid, make another grid closer to the extremes. 
+
+```{python}
+pred = svc.predict(X_test)
+```
+
+```{python}
+from sklearn.metrics import accuracy_score
+from sklearn.metrics import recall_score
+
+accuracy_score(y_test, pred)
+recall_score(y_test, pred)
+```
+
+For parameter tuning, we ask scoring to be: 
+
+```{python}
+svc = make_pipeline(
+  transformer,
+  GridSearchCV(
+    estimator=SVC(kernel="linear"),
+    param_grid={
+      "C": np.logspace(-3, 3, 50)
+    },
+    cv=kfold,
+    scoring = 'recall',
+    n_jobs=4
+  )
+)
+
+svc.fit(X_tv, y_tv)
+
+svc[1].best_estimator_
+
+pred = svc.predict(X_test)
+accuracy_score(y_test, pred)
+recall_score(y_test, pred)
+```
+
+RBF Kernel = 
+
+```{python}
+svc_rbf = make_pipeline(
+  transformer,
+  GridSearchCV(
+    estimator=SVC(kernel="rbf"),
+    param_grid={
+      "C": np.logspace(-3, 3, 20),
+      "gamma": np.logspace(-3,3,20)
+    },
+    cv=kfold,
+    scoring = 'recall',
+    n_jobs=4
+  )
+)
+
+svc_rbf.fit(X_tv, y_tv)
+
+svc_rbf[1].best_estimator_
+
+pred = svc_rbf.predict(X_test)
+accuracy_score(y_test, pred)
+recall_score(y_test, pred)
+```
+
+Polynomial Kernel = 
+
+```{python}
+svc_poly = make_pipeline(
+  transformer,
+  GridSearchCV(
+    estimator=SVC(kernel="poly"),
+    param_grid={
+      "C": np.logspace(-3, 3, 20),
+      "gamma": np.logspace(-3,3,20),
+      "degree": [2,3]
+    },
+    cv=kfold,
+    scoring = 'recall',
+    n_jobs=4
+  )
+)
+
+svc_poly.fit(X_tv, y_tv)
+
+svc_poly[1].best_estimator_
+
+pred = svc_poly.predict(X_test)
+accuracy_score(y_test, pred)
+recall_score(y_test, pred)
+```
