--- a/packages.bib
+++ b/packages.bib
@@ -51,7 +51,7 @@
   title = {dbplyr: A dplyr Back End for Databases},
   author = {Hadley Wickham and Maximilian Girlich and Edgar Ruiz},
   year = {2021},
-  note = {R package version 2.1.0},
+  note = {R package version 2.1.1},
   url = {https://CRAN.R-project.org/package=dbplyr},
 }
 
@@ -75,7 +75,7 @@
   title = {dplyr: A Grammar of Data Manipulation},
   author = {Hadley Wickham and Romain François and Lionel Henry and Kirill Müller},
   year = {2021},
-  note = {R package version 1.0.5},
+  note = {R package version 1.0.7},
   url = {https://CRAN.R-project.org/package=dplyr},
 }
 
@@ -130,8 +130,8 @@
 @Manual{R-ggplot2,
   title = {ggplot2: Create Elegant Data Visualisations Using the Grammar of Graphics},
   author = {Hadley Wickham and Winston Chang and Lionel Henry and Thomas Lin Pedersen and Kohske Takahashi and Claus Wilke and Kara Woo and Hiroaki Yutani and Dewey Dunnington},
-  year = {2020},
-  note = {R package version 3.3.3},
+  year = {2021},
+  note = {R package version 3.3.5},
   url = {https://CRAN.R-project.org/package=ggplot2},
 }
 
@@ -163,7 +163,7 @@
   title = {jtools: Analysis and Presentation of Social Scientific Data},
   author = {Jacob A. Long},
   year = {2021},
-  note = {R package version 2.1.3},
+  note = {R package version 2.1.4},
   url = {https://jtools.jacob-long.com},
 }
 
@@ -179,15 +179,15 @@
   title = {knitr: A General-Purpose Package for Dynamic Report Generation in R},
   author = {Yihui Xie},
   year = {2021},
-  note = {R package version 1.31},
+  note = {R package version 1.34},
   url = {https://yihui.org/knitr/},
 }
 
 @Manual{R-LaplacesDemon,
   title = {LaplacesDemon: Complete Environment for Bayesian Inference},
   author = {Byron Hall and Martina Hall and {Statisticat, LLC}},
-  year = {2020},
-  note = {R package version 16.1.4},
+  year = {2021},
+  note = {R package version 16.1.6},
   url = {https://github.com/LaplacesDemonR/LaplacesDemon},
 }
 
@@ -277,7 +277,7 @@ https://personality-project.org/r/psych-manual.pdf},
   title = {rmarkdown: Dynamic Documents for R},
   author = {JJ Allaire and Yihui Xie and Jonathan McPherson and Javier Luraschi and Kevin Ushey and Aron Atkins and Hadley Wickham and Joe Cheng and Winston Chang and Richard Iannone},
   year = {2021},
-  note = {R package version 2.7},
+  note = {R package version 2.11},
   url = {https://CRAN.R-project.org/package=rmarkdown},
 }
 
@@ -291,10 +291,10 @@ https://personality-project.org/r/psych-manual.pdf},
 
 @Manual{R-samplingbook,
   title = {samplingbook: Survey Sampling Procedures},
-  author = {Juliane Manitz and contributions by Mark Hempelmann and Goeran Kauermann and Helmut Kuechenhoff and Shuai Shao and Cornelia Oberhauser and Nina Westerheide and Manuel Wiesenfarth},
-  year = {2017},
-  note = {R package version 1.2.2},
-  url = {https://CRAN.R-project.org/package=samplingbook},
+  author = {Juliane Manitz and Mark Hempelmann and Goeran Kauermann and Helmut Kuechenhoff and Shuai Shao and Cornelia Oberhauser and Nina Westerheide and Manuel Wiesenfarth},
+  year = {2021},
+  note = {R package version 1.2.4},
+  url = {https://www.samplingbook.manitz.org},
 }
 
 @Manual{R-semPlot,
@@ -382,7 +382,7 @@ Output},
   title = {tibble: Simple Data Frames},
   author = {Kirill Müller and Hadley Wickham},
   year = {2021},
-  note = {R package version 3.1.2},
+  note = {R package version 3.1.4},
   url = {https://CRAN.R-project.org/package=tibble},
 }
 
@@ -397,8 +397,8 @@ Output},
 @Manual{R-tidyverse,
   title = {tidyverse: Easily Install and Load the Tidyverse},
   author = {Hadley Wickham},
-  year = {2019},
-  note = {R package version 1.3.0},
+  year = {2021},
+  note = {R package version 1.3.1},
   url = {https://CRAN.R-project.org/package=tidyverse},
 }
 
