--- a/index.Rmd
+++ b/index.Rmd
@@ -11,7 +11,7 @@ link-citations: yes
 description: This is a summary of r code learned throughout several courses of my master in management.
 ---
 
-```{r setup, include=FALSE}
+```{r setup1, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE, class.source = "watch-out", options(scipen=999), out.width = "100%", comment = "", warning=FALSE, reticulate.repl.quiet = FALSE) 
 source("www/init.R")
 source("www/Table_Design.R")
